2004-12-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/posix/sysconf.c (__sysconf_check_spec): Only define
	if it will be actually used.

2004-12-07  Roland McGrath  <roland@redhat.com>

	* rt/tst-timer5.c (setup_test): New function.
	(TEST_CLOCK_MISSING): Use it to punt test if timer_create does not
	support CLOCK_MONOTONIC.

2004-12-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/clone2.S (__clone2): Add support for
	NPTL where the PID is stored at userlevel and needs to be reset when
	CLONE_THREAD is not used.  Restore gp before calling _exit.

2004-12-07  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/clone.S: Clear the frame pointer when
	starting a new thread.  Add support for NPTL where the PID is stored
	at userlevel and needs to be reset when CLONE_THREAD is not used.

2004-12-01  Jakub Jelinek  <jakub@redhat.com>

	* elf/rtld.c (process_envvars): Don't consider LD_SHOW_AUXV
	and LD_DYNAMIC_WEAK if __libc_enable_secure.
	If __libc_enable_secure, /etc/suid-debug doesn't exist and
	program will be actually run, turn off all debugging.
	* sysdeps/generic/unsecvars.h (UNSECURE_ENVVARS): Add LD_DEBUG,
	LD_DYNAMIC_WEAK and LD_SHOW_AUXV.

2004-12-06  Jakub Jelinek  <jakub@redhat.com>

	* time/tzset.c (tzset_internal): If + or - is seen,
	but no offset after it, reset offset to 0.  [BZ #601]

2004-12-06  Ulrich Drepper  <drepper@redhat.com>

	* libio/ioseekpos.c (_IO_seekpos_unlocked): Call _IO_SEEKOFF not
	_IO_SEEKPOS, saving one indirect jump.

	* libio/fileops.c (_IO_new_file_seekoff): Fix optimization of in-buffer
	seek.  Remove dead code.

2004-12-02  Jakub Jelinek  <jakub@redhat.com>

	* libio/Makefile (tests): Add bug-ungetc4.
	* libio/bug-ungetc4.c: New test.

2004-12-06  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/clock_nanosleep.c (clock_nanosleep): Diagnose EINVAL
	for CLOCK_THREAD_CPUTIME_ID, not ENOTSUP.
	Use SYSDEP_NANOSLEEP handler before validating CLOCK_ID value.
