@@ -1,3 +1,12 @@
+2004-12-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf/ldd.bash.in: For -u, set bind_now=yes.
+	If eval $add_env '"$file"' exits with exitcode 5, retry with
+	eval $add_env \${RTLD} '"$file"'.
+	Remove | cat usage, it breaks exit code propagation.
+	* elf/rtld.c (process_envvars): If __libc_enable_secure and
+	mode != normal, exit with exitcode 5.
+
 2004-12-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/posix/sysconf.c (__sysconf_check_spec): Only define
